<resources>
    <string name="app_name">SmartParkingSystem</string>
    <string name="login">Login</string>
    <string name="UserName">UserName</string>
    <string name="password">Password</string>
    <string name="UserIc">Ic Number</string>
    <string name="signuphere">or SignUp</string>
    <string name="signup">Create Account</string>
    <string name="Signup">Sign Up</string>
    <string name="fullname">Full Name</string>
    <string name="icnumber">Ic Number</string>
    <string name="email">Email address</string>
    <string name="loginhere">"or Login "</string>
    <string name="Welcome">Welcome !</string>
    <string name="home">Home</string>
    <string name="HomePage">Home Page</string>
    <string name="Username">Username</string>
    <string name="forgotpass">Forgot Password?</string>
    <string name="confirmpass">Confirmed Password</string>
    <string name="checkbox">I agree with terms and condition</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="googleAPI">AIzaSyAzIAXPaHjNyrPHgN64Lze-VH--Qdc9Jc0</string>
    <string name="search">Searching...</string>
    <string name="current">Current</string>
    <string name="history">History</string>
    <string name="upcoming">Upcoming</string>

    <string-array name="number_arrays">
        <item>Please choose.....</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
</resources>